--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,45 @@
 {
     "name": "laasti/symfony-session-provider",
     "description": "A league/container service provider for Symfony's session.",
+    "type": "library",
     "license": "MIT",
     "authors": [
         {
             "name": "Sonia Marquette",
-            "email": "contact@nebulousweb.com"
+            "email": "contact@nebulousweb.com",
+            "homepage": "http://nebulousweb.com/",
+            "role": "Developer"
         }
     ],
+    "support": {
+        "issues": "https://github.com/laasti/symfony-session-provider/issues",
+        "wiki": "https://github.com/laasti/symfony-session-provider/wiki"
+    },
     "require": {
+        "php" : "~5.6|~7.0",
         "league/container": "^1.3",
         "symfony/http-foundation": "^2.7"
     },
     "require-dev": {
-    },
-    "suggest": {
+        "phpunit/phpunit" : "~4.0||~5.0",
+        "squizlabs/php_codesniffer": "^2.3"
     },
     "autoload": {
         "psr-4": {
             "Laasti\\SymfonySessionProvider\\": "src/"
+        }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "scripts": {
+        "test": "phpunit",
+        "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
+        "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
         }
     }
 }
